# eval

./: LICENSE  README.md  pyproject.toml
notebooks/: 6_3_pruning_structured_llama3.2-1b_OK.ipynb  eval.ipynb  perplexity.ipynb  research.ipynb  rouge.ipynb
src/metrics/: rouge.py
src/metrics/base/: ppl.py
