[project]
name = "optim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchprofile>=0.0.4",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "trl>=0.21.0",
]
